@@ -1,5 +1,7 @@
 Changes in BB version 2014.10-1
 
+   o	Added optional lower and upper for projectLinear when called from spg.
+
    o	Changed handling of lower and upper in spg(), BBoptim(), and
    	multiStart() so they must be specified in those arguments and 
 	not as part of projectArgs.
